--- a/_posts/Blog/2022-09-16-Mark Down.md
+++ b/_posts/Blog/2022-09-16-Mark Down.md
@@ -18,11 +18,50 @@ date: 2022-09-16
 last_modified_at: 2022-09-16
 ---
 
-Git Hub를 이용한 첫번째 포스팅
+Github Blog를 만들고 있다.
 
-블로그 양식은 minimal mistakes를 사용한다.
+Github Blog의 경우 Jekyll 정적 웹 생성기를 이용하므로 포스팅하는데 마크업 언어(HTML, MarkDown 등) 를 사용한다.
 
-jekyll blog이므로 Markdown 문법으로 작성한다.
+마크업 언어중 Mark Down 문법을 사용하기로 결정하여 사용법을 정리하고자 한다.
 
-추후 포스팅 할것
-1. blog 댓글 기능 추가하기
+Jekyll 이란?
+------------
+Jekyll은 Ruby 언어를 이용하여 만든 프레임워크로
+깃허브 설립자중 한명이 만들어 깃허브로 블로그를 만드는데 Jekyll이 사용된다.   
+
+Jekyll은 마크업 언어를 정적 웹사이트로 변환해준다.
+<br><br><br>
+
+Mark Down 문법
+===
+  
+## 1. 헤더 표현
+---
+제목 앞에 #을 붙여서 크기를 조절 할수 있다.
+
+    #       H1
+    ##      H2
+    ###     H3
+    ####    H4
+    #####   H5
+    ######  H6
+
+적용예 :
+# h1
+## h2
+### h3
+#### h4
+##### h5
+###### h6
+<br><br>
+
+
+## 2. 줄바꿈
+---
+\<br>을 이용하면 줄바꿈을 표현할수 있다.
+
+사용예:
+
+![Line](/img/Blog/2022-09-16-MarkDown/줄바꿈_예시.png)
+
+MarkDown 문법을 이용
