--- a/_posts/Blog/2022-09-16-Mark Down.md
+++ b/_posts/Blog/2022-09-16-Mark Down.md
@@ -30,6 +30,7 @@ Jekyll은 Ruby 언어를 이용하여 만든 프레임워크로
 깃허브 설립자중 한명이 만들어 깃허브로 블로그를 만드는데 Jekyll이 사용된다.   
 
 Jekyll은 마크업 언어를 정적 웹사이트로 변환해준다.
+
 <br><br><br>
 
 Mark Down 문법
@@ -46,13 +47,10 @@ Mark Down 문법
     #####   H5
     ######  H6
 
-적용예 :
+사용 예시 :
 # h1
-## h2
-### h3
-#### h4
-##### h5
-###### h6
+![Header](/img/Blog/2022-09-16-MarkDown/헤더표시.png)
+
 <br><br>
 
 
@@ -60,8 +58,52 @@ Mark Down 문법
 ---
 \<br>을 이용하면 줄바꿈을 표현할수 있다.
 
-사용예:
+사용 예시 :
 
 ![Line](/img/Blog/2022-09-16-MarkDown/줄바꿈_예시.png)
 
-MarkDown 문법을 이용
+<br><br>
+
+## 3. 목록
+---
+* 순서가 있는 목록  
+1,2,3 순서를 표현하기위해서는 숫자 + . 으로 표현 한다.  
+1. 첫번째
+2. 두번째
+3. 세번째
+
+* 순서가 없는 목록   
+순서가 없는 목록을 표현하기 위해서는 * + - 를 사용하면 된다.   
+들여쓰기한 위치에 따라 모양이 달라진다.
+
+* *를 사용
+    * Tab * 를 사용
+        *  TabTab * 를 사용 
+
++ +를 사용
+    + Tab + 를 사용
+        +  TabTab + 를 사용 
+
+- -를 사용
+    - Tab - 를 사용
+        -  TabTab - 를 사용 
+
+
+## 4. 코드
+---
+
+'''python
+
+A=0
+print(A)
+
+'''
+
+
+
+
+
+
+
+
+
