--- a/_posts/Blog/2022-09-16-Mark Down.md
+++ b/_posts/Blog/2022-09-16-Mark Down.md
@@ -92,12 +92,12 @@ Mark Down 문법
 ## 4. 코드
 ---
 
-'''python
+![CodeBlocTable](/img/Blog/2022-09-16-MarkDown/코드블럭표.png)
 
-A=0
-print(A)
-
-'''
+    '''python
+    A=0
+    print(A)
+    '''
 
 
 
