Mark Down 이미지 수정

--- a/_posts/Blog/2022-09-16-Mark Down.md
+++ b/_posts/Blog/2022-09-16-Mark Down.md
@@ -132,7 +132,7 @@ print(A)
 사용 예시 :   
 \!\[img](/BeomHyuck.github.io/img/Blog/2022-09-16-MarkDown/이미지.png)
 
-![img](/BeomHyuck.github.io/img/Blog/2022-09-16-MarkDown/이미지.png)
+![img](/img/Blog/2022-09-16-MarkDown/이미지.png)
 
 <br><br>
 
