--- a/_posts/Blog/2022-09-16-Mark Down.md
+++ b/_posts/Blog/2022-09-16-Mark Down.md
@@ -15,7 +15,7 @@ toc: true
 toc_sticky: true
  
 date: 2022-09-16
-last_modified_at: 2022-09-16
+last_modified_at: 2022-09-18
 ---
 
 Github Blog를 만들고 있다.
@@ -136,6 +136,19 @@ print(A)
 
 <br><br>
 
+## 6. 표
+---
+MarkDown문법에서 표를 표현하기 위해서는  다음과 같은 방식으로 표현한다.   
+
+![Table](/img/Blog/2022-09-16-MarkDown/%ED%91%9C%ED%98%95%EC%8B%9D.png)  
+
+정렬을 위해서는 다음과 같이 사용하면 된다.
+   
+:--- 왼쪽 정렬   
+---: 오른쪽 정렬   
+:---: 가운데정렬      
+
+<br><br><br>
 블로그를 작성하면서 가장 많이 사용할 문법들을 정리해 봤다.
 
 추후에 포스팅을 하면서 더 필요한 내용이 있으면 이곳에 다시 정리할 것.
