JavaScript CheatSheet 추가

--- a/_posts/Javascript/2022-09-18-Dom이란.md
+++ b/_posts/Javascript/2022-09-18-Dom이란.md
@@ -60,6 +60,10 @@ DOM의 중요 요소
 |element|element 는 DOM API 의 member 에 의해 return 된 element 또는 element type 의 node 를 의미한다.
 |nodeList|element의 배열로 nodeList의 Items 은 index 를 통해 접근 가능하며, 다음과 같이 두 가지 방식이 있다:<br>list.item(1) <br>list[1]
    
-   
-           
+<br><br>
+
+CheatSheet
+===
+JavaScript로 사용할수 있는 CheatSheet   
+[CheatSheet](https://gist.github.com/thegitfather/9c9f1a927cd57df14a59c268f118ce86)
 
