연습문제1 풀이

--- a/_posts/Javascript/practice/2022-09-20-배열.md
+++ b/_posts/Javascript/practice/2022-09-20-배열.md
@@ -1,11 +1,11 @@
 ---
-title:  "JavaScript 배열"
-excerpt: "JavaScript 배열의 활용법"
+title:  "연습 문제1 - orderOfPresent"
+excerpt: "연습 문제1 풀이"
 
 categories:
   - Javascript
 tags:
-  - [Javascript, array]
+  - [Javascript,codestates,toy problem]
 
 comment: true
 
@@ -18,142 +18,164 @@ date: 2022-09-20
 last_modified_at: 2022-09-20
 ---
 
-JavaScript에서 사용하는 배열에 대해서 알아본다.
-
-<br><br>
-
-선언
-===
-배열의 선언 방법   
-배열을 선언하는 방법에는 []를 사용하는 방법과 Array()를 사용하는 2가지 방법이 있다.
-
-```javascript
-[]를 사용하는 방법
-let arr = []      // 빈배열
-let arr = [,,,]   // 크기가 3인 빈 배열
-let arr = [1,2,3] // 초기화된 배열
-
-Array를 사용하는 방법
-let arr = new Array()      // 빈배열
-let arr = new Array(3)     // 크기가 3인 배열
-let arr = new Array(1,2,3) // 초기화된 배열
-```
-<br><br>
-
-다른언어의 배열과의 차이점
-===
-자바스크립트의 배열은 배열내부의 데이터 타입이 서로 다를 수 있다.    
-```javascript
-let arr = [1,2,"A","B"]
-
-console.log(arr)
-==> [1,2,"A","B"]
-```
-
-<br><br>
-
-자주사용하는 Method
+문제
 ===
 
-배열에 값을 추가하는 방법
-```javascript
-let arr = ["A"]
+총 조의 수 N, 발표 순서 K가 주어질 때    
+발표 순서가 총 경우의 수 중에서 몇번째인지 리턴해야합니다.
 
-배열 끝에 값 추가
-a.push("123") 
-console.log(a) 
-=> ['A','123']
+모든 경우의 수가 담긴 배열은 번호가 작을수록 앞에 위치한다고 가정합니다.    
+ex) N = 3일경우, [[1,2,3],[1,3,2],[2,1,3],[2,3,1],[3,1,2],[3,2,1]]
 
-배열 앞에 값 추가
-a.unshift(123)
-console.log(a)
-=> [123,'A','123']
-```
+<br>
 
-배열의 값에 접근하는 방법은 인덱스를 사용하면 된다
-```javascript
-a[0] // 123
-```
+입력
+===
+인자 1: N
 
-index를 찾고 싶을때 indexOf 사용
-```javascript
-fruits.push('망고')
-// ["딸기", "바나나", "망고"]
+Number 타입의 1 <= N <= 12인 조의 개수
 
-let pos = fruits.indexOf("바나나")
-// 1
-```
-값 제거
-```javascript
-배열 끝에서부터 항목 제거하기
+인자 2: K
 
-let last = fruits.pop() // 끝에있던 '오렌지'를 제거
-// ["사과", "바나나"]
+Number타입의 Array (0 <= index)
 
-배열 앞에서부터 항목 제거하기
+ex) n이 3이고 k가 [2, 3, 1]일 경우
 
-let first = fruits.shift() // 제일 앞의 '사과'를 제거
-// ["바나나"]
-```
+모든 경우의 수를 2차원 배열에 담는다면 [[1,2,3],[1,3,2],[2,1,3],[2,3,1],[3,1,2],[3,2,1]]이 되고,
 
-인덱스를 이용한 값 제거
-```javascript
-let removedItem = fruits.splice(pos, 1) // 항목을 제거하는 방법
-
-let vegetables = ['양배추', '순무', '무', '당근']
-console.log(vegetables)
-// ["양배추", "순무", "무", "당근"]
-
-let pos = 1
-let n = 2
-
-let removedItems = vegetables.splice(pos, n)
-// 배열에서 항목을 제거하는 방법
-// pos 인덱스부터 n개의 항목을 제거함
-
-console.log(vegetables)
-// ["양배추", "당근"] (원 배열 vegetables의 값이 변함)
-
-console.log(removedItems)
-// ["순무", "무"]
-```
+반환하는 값은 3이 됩니다.
 
 
-filter
+문제풀이
+===
+
+## 1. 순열을 이용하여 모든 경우의 수를 구한다.
 ---
-Array.prototype.filter()   
-filter() 메서드는 주어진 함수의 테스트를 통과하는 모든 요소를 모아 새로운 배열로 반환한다.
+문제를 보고 제일 처음 생각한 풀이 방식이다.   
+
+Pseudo Code   
+1. 주어진 순서 K로 만들 수있는 모든 경우의 수를 순열로 만든다.
+2. 만들어진 경우의 수를 오름차순으로 정렬한다.
+3. 앞에서 부터 K와 경우의 수를 순차적으로 비교한다.
+4. 비교한 값이 일치할때 해당 순서를 리턴한다.
 
 ```javascript
-let arr = [1,2,3,4,5,6,7,8,9,10]
-
-let lowThan5 = arr.filter(v => (v <= 5))
-
-console.log(lowThan5)
-=> [1,2,3,4,5]
+function orderOfPresentation (N, K) {
+  let arr = permutation(N,K) // 1. 경우의 수 순열로 만듬
+  let result = 0
+  arr.sort()  // 2. 오름차순 정렬
+  arr.forEach((v,idx,arr)=>{ 
+    if(compareArray(v,K)){  // 3. K와 경우의 수 순차적 비교
+      result = idx // 4. 일치할때 순서 저장
+      break
+    }
+  })
+  return result // 4. 일치할때 순서 리턴
+}
 ```
 
-map
----
-Array.prototype.map()
-map() 메서드는 배열 내의 모든 요소 각각에 대하여 주어진 함수를 호출한 결과를 모아 새로운 배열을 반환한다.
+시행착오   
+1. 주어진 순서가 배열로 이루어져 있어 배열을 바로 비교할 수 없었다.   
+-> JSON.stringify를 사용하여 배열을 Json 문자열로 변환하여 비교하였다.   
+* JSON.sringify : JavaScript 값이나 객체를 JSON 문자열로 변환합니다.   
+2. 순서의 숫자가 9까지는 동작하였으나 12까지 증가하자 stack overflow가 발생하였다.   
+-> 발표 순서는 순열로 만들어 입력이 12로 들어오면 최대 크기는 12!이다.   
+이는 약 4억 8천만에 해당하며, 일반적인 수행 속도 상한(약 1억)을 훨씬 상회하므로 순열을 전부 생성하는 것은 무리라고 판단하여 다른 방식을 탐색하였다.
+```javascript
+function orderOfPresentation (N, K) {
+  let arr = permutation(N,K)
+  let result = 0
+  arr.sort()
+  arr.forEach((v,idx,arr)=>{
+    if(compareArray(v,K)){
+      result = idx
+      break
+    }
+  })
+  return result
+}
+
+const compareArray = function(a, b){
+  if(JSON.stringify(a) == JSON.stringify(b)){
+    return true;
+  }
+  else{
+    return false;
+  }
+}
+
+function permutation(N,K) {
+  // TODO: 여기에 코드를 작성합니다.
+  
+  if(N == 1) 
+  {
+      //console.log(N)
+      return K.map((v)=>[v])
+  }
+  //console.log(K)
+  K.forEach((fixed,idx,arr) => {
+    //console.log(N)
+    const rest = [...arr.slice(0,idx), ...arr.slice(idx+1)];
+    console.log(rest)
+    const permut = permutation(N-1,rest)
+    const attach = permut.map((v) => [fixed, ...v]);
+    result.push(...attach)
+    //console.log(result)
+  })
+  return result
+}
+```
+
+## 2. 순서를 계산 할 수 있는 수식을 만든다.
+처음 생각한 풀이에서 수행횟수가 너무 많은게 문제가 되었으므로 수행횟수를 줄여서 문제의 답을 구하고자 했다.   
+발표 순서는 순열의 오름차순으로 구성되므로 발표 순서를 수식으로 만들면 몇번째인지 계산할 수 있을거라 생각 했다.    
+
+순열의 구성 방식이 "첫번째값, (첫번째값을 제외한 나머지 값중 선택1)"의 반복이므로   
+[1,2,3,4,5,6,7]로 구성할 수 있는 순열의 수는 7!이 된다.   
+이중 맨 앞자리가 7로 고정될경우 7을 제외한 수로 구성되는 순열이므로 6!이 된다.
+
+그렇다면 [1,2,3,4,5,6,7]의 값으로 구성 된 순열을 오름차순으로 정렬했을때 첫번째 자리 값을 3으로 가지는 배열은 첫번째 자리값이 [1,2]로 가지는 배열보다 항상 뒤의 순서로 오게 된다.    
+첫째자리를 1,2로 고정했을때 가질 수 있는 순열은 각 6!로 2*6!로 표현할수 있다.   
+이를 좀더 정리하면 (첫째 자리수보다 작은값 * 남은수!)로 표현된다.   
+
+문제로 돌아와서 [2,3,1]의 값의 순서를 구해보면   
+1. 첫번째자리를 2로 했을떄 2를 제외한 배열에서 2보다 작은값 1로 만들수 있는 순열의수 2!
+2. 두번째자리를 3으로 했을때 2,3을 제외한 배열에서 3보다 작은값 1로 만들수 있는 순열의 수 1!
+3. 세번째자리를 1로 했을때 1을 제외한 배열에서 1보다 작은값은 없으므로 만들수 있는 순열의 수 0!
+4. 2! + 1! + 0! = 3
+
+이 과정을 Psedo code로 만들면
+
+Psedu code
+1. 배열의 첫번째 값을 고정한다.
+2. 고정한 값을 제외한 나머지 배열을 구한다
+3. 배열중 고정한 값보다 작은 값의 갯수를 구한다.
+4. 작은값의 갯수와 남은 배열의 수로 만들 수 있는 순열의 수를 곱한다.
+5. 남은 배열을 가지고 1.의 과정으로 돌아가 남은 배열의 크기가 0이 될때까지 반복한다.
+6. 4.에서 구해진 모든 값을 더한다.
 
 ```javascript
-const array1 = [1, 4, 9, 16];
+function orderOfPresentation (N, K) {
+  let result = 0
 
-// pass a function to map
-const map1 = array1.map(x => x * 2);
+  K.forEach((fixed,idx,arr)=>{  // 1. fixed 값이 첫번째값이 된다. / 5. 반복한다.
+      const rest = [...arr.slice(idx+1)]; // 2. 고정값을 제외한 나머지 배열을 구한다.
+      const lowNumber = rest.filter((element)=> element < fixed) // 3. 배열중 고정값보다 작은값을 구한다.
+      result += lowNumber.length*factorial(rest.length) // 4. 순열의수와 작은값을 곱한다.  / 6. 모든값을 더한다.
+  })
 
-console.log(map1);
-=>[2, 8, 18, 32]
+  return result
+}
 
+function factorial(n) {
+  function cal(n, result) {
+    return n === 0 ? result : cal(n - 1, n * result);
+  }
+
+  return cal(n, 1);
+}
 ```
 
-
-
-
-
-
-글에 기재되지 않은 method를 확인하려면 [여기로](https://developer.mozilla.org/ko/docs/Web/JavaScript/Reference/Global_Objects/Array)   
-
-
+2번쨰 풀이방식으로 문제를 해결하였다.   
+이번 문제를 풀면서 수행시간을 고려하지 않아 풀이에 시간이 걸렸다.
+문제를 해결함에 있어 메모리와 시간을 고려해서 알고리즘을 작성 해야함을 깨달았다.
