연습문제 카테고리 추가

--- a/_posts/Javascript/practice/2022-09-20-배열.md
+++ b/_posts/Javascript/practice/2022-09-20-배열.md
@@ -3,7 +3,7 @@ title:  "연습 문제1 - orderOfPresent"
 excerpt: "연습 문제1 풀이"
 
 categories:
-  - Javascript
+  - Javascript_Practice
 tags:
   - [Javascript,codestates,toy problem]
 
