--- a/_posts/Javascript/javascript/2022-09-20-배열.md
+++ b/_posts/Javascript/javascript/2022-09-20-배열.md
@@ -149,6 +149,36 @@ console.log(map1);
 
 ```
 
+undefined로 나오는 값을 제거 하고 싶을때는 뒤에 filter를 사용하면 된다.
+
+```javascript
+let arr = [1,2,3,4,5,6,7]
+let result = arr.map(function(value){
+  if(value < 5){
+    return value
+  }
+})
+
+console.log(result)
+=> [ 1, 2, 3, 4, undefined, undefined, undefined ]
+
+let resultFilter = result.filter(value => value)
+console.log(resultFilter)
+=>[1,2,3,4]
+
+arr.map 뒤에 바로 filter를 붙일 수 있다.
+
+let result = arr.map(function(value){
+  if(value < 5){
+    return value
+  }
+}).filter(value => value)
+
+console.log(result)
+=> [1,2,3,4]
+
+```
+
 
 
 
