배열 concat메서드 추가

--- a/_posts/Javascript/javascript/2022-09-20-배열.md
+++ b/_posts/Javascript/javascript/2022-09-20-배열.md
@@ -179,10 +179,22 @@ console.log(result)
 
 ```
 
+concat
+---
+Array.prototype.concat()   
+concat() 메서드는 인자로 주어진 배열이나 값들을 기존 배열에 합쳐서 새 배열을 반환
+
+```javascript
+const array1 = ['a', 'b', 'c'];
+const array2 = ['d', 'e', 'f'];
+const array3 = array1.concat(array2);
+
+console.log(array3);
+// expected output: Array ["a", "b", "c", "d", "e", "f"]
+```
 
 
-
-
+<br><br>
 
 글에 기재되지 않은 method를 확인하려면 [여기로](https://developer.mozilla.org/ko/docs/Web/JavaScript/Reference/Global_Objects/Array)   
 
