--- a/_posts/Javascript/javascript/2022-09-20-배열.md
+++ b/_posts/Javascript/javascript/2022-09-20-배열.md
@@ -193,6 +193,26 @@ console.log(array3);
 // expected output: Array ["a", "b", "c", "d", "e", "f"]
 ```
 
+reduce
+---
+Array.prototype.reduce()
+reduce() 메서드는 배열의 각 요소에 대해 주어진 함수를 실행하고, 하나의 결과값을 반환
+
+reduce() 메서드는 매개변수로 (함수,초기값)을 가지고 초기값이 생략될 경우 초기값은 배열의 첫번째 값이 된다. 빈배열에서 초기값이 없을경우 오류가 발생한다.
+
+```javascript
+const array1 = [1, 2, 3, 4];
+
+// 0 + 1 + 2 + 3 + 4
+const initialValue = 0;
+const sumWithInitial = array1.reduce(
+  (previousValue, currentValue) => previousValue + currentValue,
+  initialValue
+);
+
+console.log(sumWithInitial);
+// expected output: 10
+```
 
 <br><br>
 
