--- a/_posts/Javascript/javascript/2022-09-20-배열.md
+++ b/_posts/Javascript/javascript/2022-09-20-배열.md
@@ -50,6 +50,13 @@ console.log(arr)
 ==> [1,2,"A","B"]
 ```
 
+이렇게 다른 타입을 가질 수 있는 이유는 자바스크립트에서 배열은 객체의 형태를 가지고 있기 때문이다.   
+배열을 선언하고 getOwnPropertyDescriptors를 이용해서 배열을 확인해보면 객체의 형태를 가지고 있는걸 알 수 있다.
+
+배열의 경우 key값으로 length를 가지고 있는것도 확인이 된다.
+
+![배열의실체](/img/Blog/2022-09-20-%EB%B0%B0%EC%97%B4/%EB%B0%B0%EC%97%B4%EC%9D%98%EC%8B%A4%EC%B2%B4.png)]
+
 <br><br>
 
 자주사용하는 Method
