--- a/_posts/Javascript/javascript/2022-09-23-Underbar.md
+++ b/_posts/Javascript/javascript/2022-09-23-Underbar.md
@@ -355,3 +355,37 @@ _.reduce = function (arr, iteratee, initVal) {
   return acc;
 };
 ```
+
+<br>
+
+13.once
+===
+
+once는 callback 함수를 한 번만 호출하는 '함수'를 리턴합니다.
+once가 리턴하는 함수를 여러 번 호출해도 callback 함수는 한 번 이상 호출되지 않습니다.
+
+once는 함수를 한번만 호출해야 되기 때문에 호출한적이 있는지 확인하기 위한 변수를 만들고 Closure를 이용해서 변수의 값을 저장해두는 function을 리턴합니다.
+
+```javascript
+_.once = function (func) {
+  // 1번만 호출하기 위해서 count변수를 사용합니다.
+  let count = 0;
+
+  // 결과값이 변하면 안되기 때문에 result변수에 결과를 저장해둡니다.
+  let result;
+
+  // 스프레드 연산자를 통해서 func함수의 매개변수를 전부 넘겨준다.
+  return function(...ele){
+    if(count === 0) {
+      // 한번도 실행한적 없을경우 함수 실행합니다.
+      count = 1;
+      result = func(...ele);
+    }
+    // 실행한적 있을경우 기존의 저장된 값을 리턴합니다.
+    return result;
+  };
+};
+```
+<br>
+
+14.
