배열 라이브러리 작성

--- a/_posts/Javascript/javascript/2022-09-23-Underbar.md
+++ b/_posts/Javascript/javascript/2022-09-23-Underbar.md
@@ -15,7 +15,7 @@ toc: true
 toc_sticky: true
  
 date: 2022-09-23
-last_modified_at: 2022-09-23
+last_modified_at: 2022-09-25
 ---
 
 Javascript에서 배열 메소드가 지원되지 않을때 자주 사용되던 underscore,lodash와 같은 라이브러리를 직접 구현해보면서 Callback함수의 원리에 대해서 좀더 공부하고자 합니다.
@@ -388,4 +388,346 @@ _.once = function (func) {
 ```
 <br>
 
-14.
+14.delay
+===
+
+delay는 입력으로 전달되는 시간(ms, 밀리초)후 callback 함수를 함께 전달되는 (임의의 개수의) 인자와 함께 실행합니다.
+
+임의의 인자를 받아야 하므로 arguments를 사용해서 전체 인자를 받고 거기서 함수func, 시간wait를 제외한 나머지 인자를 저장합니다.   
+setTimeout함수를 사용하여 wait만큼 기다린후 함수를 실행합니다.   
+실행하는 함수의 결과값을 리턴합니다.
+
+```javascript
+_.delay = function (func, wait) {
+  // func, wait를 제외한 arguments를 배열에 저장
+  const arr = Object.values(arguments).slice(2);
+
+  let result;
+  
+  // wait만큼의 시간 후에 func함수 실행
+  setTimeout(function(){
+    result = func(...arr);
+  },wait)
+  return result;
+};
+```
+
+<br>
+
+15.include
+===
+includes는 배열이 주어진 값을 포함하는지 확인합니다.
+
+이전에 만들어둔 indexOf 함수를 사용해서 -1 값일때는 없는것으로 판단해서 false를 리턴하고 값이 -1이 아닐때는 true를 리턴합니다.
+
+```javascript
+_.includes = function (arr, target) {
+ if(_.indexOf(arr,target) === -1) return false;
+ else return true;
+};
+```
+
+<br>
+
+16.every
+===
+
+/every는 배열의 모든 요소가 test 함수(iteratee)를 통과하면 true를, 그렇지 않은 경우 false를 리턴합니다.
+
+이전에 만들어둔 filter 함수를 사용해서 결과로 나온 배열이 기존 배열의 길이와 같으면 모두 통과했으므로 true를 리턴하면 됩니다.   
+만약, iteratee가 없을경우 identity함수(자기자신을 리턴하는 함수)를 기본값으로 합니다.
+
+```javascript
+_.every = function (arr, iteratee) {
+  // iteratee가 안주어질때 identity 함수를 기본값으로 가진다.
+  if (typeof(iteratee) === "undefined") iteratee = _.identity;
+
+  // filter 함수를 사용해서 iteratee를 통과한 배열과 기존함수의 길이를 비교해서 같으면 true 리턴합니다.
+  if(_.filter(arr,iteratee).length === arr.length) return true;
+  else return false;
+};
+```
+
+<br>
+
+17.some
+===
+
+some은 배열의 요소 중 하나라도 test 함수(iteratee)를 통과하면 true를, 그렇지 않은 경우 false를 리턴합니다.   
+
+위에 작성한 every함수와 동일하게 작성하되 기존의 배열과 길이를 비교하는게 아니라 filter의 결과로 리턴되는 배열의 크기가 0보다 클경우 true를 리턴하면 됩니다.
+
+```javascript
+_.some = function (arr, iteratee) {
+  if (typeof(iteratee) === "undefined") iteratee = _.identity;
+
+  // filter 함수를 사용해서 iteratee를 통과한 배열의 길이가 0보다 크면 true 리턴합니다.
+  if(_.filter(arr,iteratee).length > 0) return true;
+  else return false;
+};
+```
+
+<br>
+
+18.extend
+===
+
+extend는 여러 개의 객체를 입력받아, 순서대로 객체를 결합합니다.   
+첫 번째 입력인 객체를 기준으로 다음 순서의 객체들의 속성을 덮어씁니다.   
+최종적으로 (속성이 추가된) 첫 번째 객체를 리턴합니다.   
+
+extend로 전달되는 객체의 수는 정해져 있지 않으므로 argument를 이용해서 전달되는 모든 값을 배열에 저장합니다.   
+저장한 배열에서 값을 순차적으로 합쳐줍니다. 합칠떄는 Object의 assign 메소드를 사용합니다.   
+
+* assign 메소드는 첫번째 인자에 두번째 인자를 합치고 첫번째 인자를 리턴합니다.
+
+```javascript
+_.extend = function () {
+    // 인자를 전부 받아 argArr배열에 저장합니다.
+    const argArr = arguments;
+    let result = {};
+    _.each(argArr,function(ele){
+      // 배열의 요소들과 result객체를 합쳐서 result에 저장합니다.
+      Object.assign(result,ele);
+    });
+  
+    // 첫번째 객체에 결과를 저장합니다.
+    return Object.assign(arguments[0],result);
+};
+```
+<br>
+
+19.defaults
+===
+
+defaults는 _.extend와 비슷하게 동작하지만, 이미 존재하는 속성(key)을 덮어쓰지 않습니다.  
+
+extend와 비슷하게 동작하지만 기존값으로 한번더 assign해줘서 변경된 값을 원래데로 되돌려주는 과정을 추가하면 됩니다.
+
+```javascript
+_.defaults = function () {
+  // 인자를 전부 받아 argArr배열에 저장합니다..
+  const argArr = arguments;
+  let result = {};
+  _.each(argArr,function(ele){
+    // 임시로 저장할 객체를 만듭니다.
+    const tmp = {};
+    // 1. 결과를 tmp에 저장합니다.
+    Object.assign(tmp,result);
+    // 2. 새로운 값을 tmp에 assign합니다.
+    Object.assign(tmp,ele);
+    // 3. 변경된 부분을 다시 원래값으로 돌려줍니다.
+    Object.assign(tmp,result);
+    // 4. 최종 변경된 값을 저장합니다.
+    Object.assign(result,tmp);
+  });
+
+  // 첫번째 객체에 결과를 저장합니다.
+  return Object.assign(arguments[0],result);
+};
+```
+
+<br>
+
+20.zip
+===
+
+zip은 여러 개의 배열을 입력받아, 같은 index의 요소들을 묶어 배열로 만듭니다.   
+각 index 마다 하나의 배열을 만들고, 최종적으로 이 배열들을 요소로 갖는 배열을 리턴합니다.   
+zip의 입력으로 전달되는 배열이 수는 정해져 있지 않고, 각 배열의 길이는 다를 수 있습니다.   
+최종적으로 리턴되는 배열의 각 요소의 길이는 입력으로 전달되는 배열 중 가장 '긴' 배열의 길이로 통일됩니다.   
+특정 index에 요소가 없는 경우, undefined를 사용합니다.    
+
+가장 긴 배열의 크기만큼 반복해서 각 인덱스마다 배열을 새로 만들어서 결과배열에 추가한뒤 결과 배열을 리턴하면 됩니다.
+
+```javascript
+_.zip = function () {
+  const argArr = arguments;
+  const result = [];
+
+  // 가장 긴 배열의 크기 저장합니다.
+  let maxLength  = 0;
+  for(let i = 0; i<arguments.length;i++){
+    if(arguments[i].length > maxLength) maxLength = arguments[i].length;
+  }
+
+  for(let i = 0; i<maxLength; i ++){
+    // 각 순서의 값을 합칠 배열 생성합니다.
+    const tmp = [];
+    // 순차적으로 순회하며 i번째 값 순서대로 tmp배열에 저장합니다.
+    _.each(argArr,function(ele){
+      tmp.push(ele[i]);
+    });
+    // 결과에 tmp 배열을 추가합니다.
+    result.push(tmp);
+  }
+  return result;
+};
+```
+
+<br>
+
+21.zipstrict
+===
+
+zipStrict은 zip과 비슷하게 동작하지만,
+최종적으로 리턴되는 배열의 각 요소의 길이는 입력으로 전달되는 배열 중 가장 '짧은' 배열의 길이로 통일됩니다.    
+그 외 조건은 앞서 _.zip과 동일합니다.   
+
+zip과 동일하게 동작하므로 zip과 같은 구조에서 maxLength값만 최소길이를 저장할수 있게 minLength로 바꾸면 됩니다.
+
+```javascript
+_.zipStrict = function () {
+  const argArr = arguments;
+  const result = [];
+
+  // 가장 짧은 배열의 크기 저장합니다.
+  let minLength  = arguments[0].length;
+  for(let i = 1; i<arguments.length;i++){
+    if(arguments[i].length < minLength) minLength = arguments[i].length;
+  }
+
+  for(let i = 0; i<minLength; i ++){
+    // 각 순서의 값을 합칠 배열 생성합니다.
+    const tmp = [];
+    // 순차적으로 순회하며 i번째 값 순서대로 tmp배열에 저장합니다.
+    _.each(argArr,function(ele){
+      tmp.push(ele[i]);
+    });
+    // tmp 배열을 추가합니다.
+    result.push(tmp);
+  }
+  return result;
+};
+```
+
+<br>
+
+22.intersection
+===
+
+intersection은 여러 개의 배열을 입력받아, 교집합 배열을 리턴합니다.   
+교집합 배열은 모든 배열에 공통으로 등장하는 요소들만을 요소로 갖는 배열입니다.
+
+첫번째 배열의 각요소를 나머지 배열에 있는지 검사를 해서 전부 있을경우 새로운배열에 추가해줍니다.    
+새로운 배열은 중복된 값을 가지지 않도록 uniq함수를 사용하여 리턴하면 됩니다.   
+
+```javascript
+_.intersection = function () {
+  // 입력되는 인자를 저장합니다.
+  const arrArg = arguments;
+
+  // 첫번째를 인자를 비교의 기준으로 설정합니다.
+  const fixArr = arrArg[0];
+  
+  const result = []
+
+  // 가장 긴 배열의 크기 저장합니다.
+  let maxLength  = 0;
+  for(let i = 0; i<arguments.length;i++){
+    if(arguments[i].length > maxLength) maxLength = arguments[i].length;
+  }
+
+  // 가장 긴 배열의 크기만큼 반복합니다.
+  for(let i = 0; i<maxLength; i++){
+    let count = 0;
+
+    // 첫번째 배열의 요소값이 나머지 배열에 전부 있는지 검사합니다.
+    _.each(arguments,function(ele){
+      // indexOf함수를 이용해 기준배열의 값이 있는지 확인합니다.
+      if(_.indexOf(ele,fixArr[i]) >= 0) count++;
+    });
+    
+    // 모든 배열에서 같은 값을 가질때 해당 값을 배열에 추가합니다.
+    if(count == arguments.length) result.push(fixArr[i]);
+  }
+  
+  // 중복되는 요소를 없애줍니다.
+  return _.uniq(result);
+};
+```
+
+<br>
+
+23.difference
+===
+
+difference는 여러 개의 배열을 입력받아, 차집합 배열을 리턴합니다.   
+차집합 배열은 첫 번째 배열에서 차례대로 다음 배열들의 요소들을 제외한 배열입니다.   
+차집합 배열의 요소들은 첫 번째 입력인 배열을 기준으로 합니다.   
+차집합이 없는 경우 빈 배열을 리턴합니다.   
+
+intersection과 같은 구조를 사용하면 됩니다.   
+바꾸는건 같을때가 아니라 나머지 배열에서 첫번째 배열의 요소가 없을때만 추가해주도록하고 리턴하면 됩니다.
+
+```javascript
+_.difference = function () {
+  // 입력되는 인자를 저장합니다.
+  const arrArg = arguments;
+
+  // 첫번째를 인자를 비교의 기준으로 설정합니다.
+  const fixArr = arrArg[0];
+  
+  const result = []
+
+  // 가장 긴 배열의 크기 저장합니다.
+  let maxLength  = 0;
+  for(let i = 0; i<arguments.length;i++){
+    if(arguments[i].length > maxLength) maxLength = arguments[i].length;
+  }
+  const rest=_.slice(arrArg,1,arrArg.length);
+  // 가장 긴 배열의 크기만큼 반복합니다.
+  for(let i = 0; i<maxLength; i++){
+    let count = 0;
+
+    // 첫번째 배열의 요소값이 나머지 배열에 전부 있는지 검사합니다.
+    _.each(rest,function(ele){
+      // indexOf함수를 이용해 기준배열의 값이 없는지 확인합니다.
+      if(_.indexOf(ele,fixArr[i]) === -1) count++;
+    });
+    
+    // 첫번째 배열에서만 값을 가질때 해당 값을 배열에 추가합니다.
+    if(count === arguments.length-1) result.push(fixArr[i]);
+  }
+  
+  // filter를 이용해서 undefined를 없애줍니다.
+  // 중복되는 요소를 없애줍니다. 
+  return _.uniq(_.filter(result,(ele)=>ele));
+  
+};
+```
+
+<br>
+
+24.sortBy
+===
+
+sortBy는 배열의 각 요소에 함수 transform을 적용하여 얻은 결과를 기준으로 정렬합니다.   
+transform이 전달되지 않은 경우, 배열의 요소 값 자체에 대한 비교 연산자의 결과를 따릅니다.   
+세 번째 인자인 order는 정렬의 방향을 나타냅니다. 생략되거나 1을 입력받은 경우 오름차순, -1을 입력받은 경우 내림차순으로 정렬합니다.    
+
+array 메소드중 sort메소드를 사용합니다.   
+sort메소드는 배열의 순서를 변경하므로 arr값을 복사해서 저장두고 그 배열을 변경해야 됩니다.
+
+```javascript
+_.sortBy = function (arr, transform, order) {
+  // transform함수가 주어지지 않았을경우 각요소값으로 비교한다.
+  const compare = transform || _.identity;
+
+  // 정렬 방향을 정합니다.
+  const direction = order || 1;
+
+  // 결과를 저장할 배열을 선언합니다.
+  const result = [...arr];
+  // sort함수를 사용합니다.
+  result.sort(function(a,b){
+    if( compare(a) < compare(b)) return -1*direction;
+    if( compare(a) > compare(b)) return 1*direction;
+    return 0;
+  });
+
+  return result;
+};
+```
+
+<br>
