--- a/_posts/Network/http/2022-10-11-http 기초.md
+++ b/_posts/Network/http/2022-10-11-http 기초.md
@@ -22,8 +22,136 @@ HTTP의 기본 구조에대해서 알아보겠습니다.
 
 HTTP
 ===
-HTTP는 Hyper Text Transfer Protocol의 줄임말 입니다.   
-클라이언트와 서버간의 메시지 교환을 위한 프로토콜로 OSI 7계층중 Application Layer(응용계층)의 프로토콜 입니다.   
+HTTP는 Hyper Text Transfer Protocol의 줄임말로 클라이언트와 서버간의 메시지 교환을 위한 프로토콜입니다.   
+OSI 7계층중에서는 Application Layer(응용계층)에 속해 있습니다.
+
+http의 주요 특징으로 상태정보를 가지지 않습니다.
+
+클라이언트와 서버간의 통신에서 http message양식에 맞춰서 통신을 하며 동작합니다.  
+http message는 요청(request), 응답(response) 두가지로 이루어져 있습니다.   
+
+<br>
+
+HTTP Message
+===
+http message는 요청, 응답 두가지 모두 기본적인 구조는 비슷하게 이루어져 있습니다.   
+구조는 start-line, header, blank line, body로 구성되어 있습니다.
+
+1. 시작 줄(start-line)에는 실행되어야 할 요청, 또은 요청 수행에 대한 성공 또는 실패가 기록되어 있습니다. 이 줄은 항상 한 줄로 끝납니다.
+
+2. 옵션으로 HTTP 헤더 세트가 들어갑니다. 여기에는 요청에 대한 설명, 혹은 메시지 본문에 대한 설명이 들어갑니다.
+
+3. 요청에 대한 모든 메타 정보가 전송되었음을 알리는 빈 줄(blank line)이 삽입됩니다. header와 body를 구분해 줍니다.
+
+4. 요청과 관련된 내용(HTML 폼 콘텐츠 등)이 들어가거나, 응답과 관련된 문서(document)가 들어갑니다. 본문의 존재 유무 및 크기는 첫 줄과 HTTP 헤더에 명시됩니다.
 
 
+HTTP 메시지의 시작 줄과 HTTP 헤더를 묶어서 요청 헤드(head)라고 부르며, 이와 반대로 HTTP 메시지의 페이로드는 본문(body) 이라고 합니다.
 
+<br>
+
+요청(request)
+---
+
+요청은 클라이언트가 서버로 보내는 메세지 입니다.
+
+Startline, header, blank line, body 로 이루어집니다.
+
+<br>
+
+<h3>Start line</h3>
+
+시작 줄은 다음과 같이 세 가지 요소로 이루어져 있습니다.
+
+1. HTTP 메서드로, (GET, PUT,POST, HEAD, OPTIONS)를 사용해 서버가 수행해야 할 동작을 나타냅니다. 
+
+2. 요청 타겟은 주로 URL, 또는 프로토콜, 포트, 도메인의 절대 경로로 나타낼 수도 있으며 이들은 요청 컨텍스트에 의해 특정지어 집니다. 요청 타겟 포맷은 HTTP 메소드에 따라 달라집니다. 포맷에는 다음과 같은 것들이 있습니다.   
+origin 형식: 끝에 '?'와 쿼리 문자열이 붙는 절대 경로입니다.   
+이는 가장 일반적인 형식이며, GET, POST, HEAD, OPTIONS 메서드와 함께 사용합니다.   
+absolute 형식: 완전한 URL 형식입니다. 프록시에 연결하는 경우 대부분 GET과 함께 사용됩니다.    
+authority 형식: 도메인 이름 및 옵션 포트(':'가 앞에 붙습니다)로 이루어진 URL의 authority component 입니다.​​​​ HTTP 터널을 구축하는 경우에만 CONNECT와 함께 사용할 수 있습니다.    
+asterisk 형식: OPTIONS와 함께 별표('*') 하나로 간단하게 서버 전체를 나타냅니다. ​​​​​  
+
+3. ​​​​HTTP 버전이 들어갑니다. 메시지의 남은 구조를 결정하기 때문에, 응답 메시지에서 써야 할 HTTP 버전을 알려주는 역할을 합니다.
+
+<br>
+
+<h3>header</h3>
+
+대소문자 구분없는 문자열 다음에 콜론(':')이 붙으며, 그 뒤에 오는 값은 헤더에 따라 달라집니다.    
+헤더는 값까지 포함해 한 줄로 구성됩니다.
+
+다양한 종류의 요청 헤더가 있는데, 이들은 다음과 같이 몇몇 그룹으로 나눌 수 있습니다.
+
+* General header: 요청과 응답 모두에 적용되지만 바디에서 최종적으로 전송되는 데이터와는 관련이 없는 헤더.
+
+* Request header: 페치될 리소스나 클라이언트 자체에 대한 자세한 정보를 포함하는 헤더.
+
+* Entity header: 컨텐츠 길이나 MIME 타입과 같이 엔티티 바디에 대한 자세한 정보를 포함하는 헤더.
+
+<br>
+
+<h3>Body</h3>
+
+본문은 요청의 마지막 부분에 들어갑니다.     
+모든 요청에 본문이 들어가지는 않습니다. GET, HEAD, DELETE , OPTIONS처럼 리소스를 가져오는 요청은 보통 본문이 필요가 없습니다.    
+
+업데이트를 하기 위한 요청의 경우 서버에 데이터를 전송합니다.    
+보통 (HTML 폼 데이터를 포함하는) POST 요청일 경우에 그렇습니다.
+
+넓게 보면 본문은 두가지 종류로 나뉩니다.
+
+* 단일-리소스 본문(single-resource bodies): 헤더 (Content-Type와 Content-Length)로 정의된 단일 파일로 구성됩니다.
+
+* 다중-리소스 본문(multiple-resource bodies): 멀티파트 본문으로 구성되는 다중 리소스 본문에서는 파트마다 다른 정보를 지니게 됩니다.
+
+<br>
+
+응답(response)
+---
+응답의 시작 줄은 (status line)이라고 불리며, 다음과 같은 정보를 가지고 있습니다.
+
+1. 프로토콜 버전: 보통 HTTP/1.1입니다.
+
+2. 상태 코드: 요청의 성공 여부를 나타냅니다. 200, 404 혹은 302입니다.   
+
+3. 상태 텍스트: 짧고 간결하게 상태 코드에 대한 설명을 글로 나타내어 사람들이 HTTP 메시지를 이해할 때 도움이 됩니다.
+
+상태 줄은 일반적으로 HTTP/1.1 404 Not Found. 같이 생겼습니다.
+
+<br>
+
+<h3>header</h3>
+
+요청의 헤더와 동일한 구조를 가집니다.
+
+* General header: 요청과 응답 모두에 적용되지만 바디에서 최종적으로 전송되는 데이터와는 관련이 없는 헤더.
+
+* Response header: 위치 또는 서버 자체에 대한 정보(이름, 버전 등)와 같이 응답에 대한 부가적인 정보를 갖는 헤더.
+
+* Entity header: 컨텐츠 길이나 MIME 타입과 같이 엔티티 바디에 대한 자세한 정보를 포함하는 헤더.
+
+<br>
+
+<h3>Body</h3>
+
+본문은 요청과 마찬가지로 응답의 마지막 부분에 들어갑니다.    
+모든 응답에 본문이 들어가지는 않습니다.    
+201, 204과 같은 상태 코드를 가진 응답에는 보통 본문이 없습니다.
+
+넓게 보면 본문은 세가지 종류로 나뉩니다.
+
+* 이미 길이가 알려진 단일 파일로 구성된 단일-리소스 본문: 헤더 (Content-Type와 Content-Length)로 정의 합니다.
+* 길이를 모르는 단일 파일로 구성된 단일-리소스 본문: Transfer-Encoding가 chunked로 설정되어 있으며, 파일은 청크로 나뉘어 인코딩 되어 있습니다.
+* 서로 다른 정보를 담고 있는 멀티파트로 이루어진 다중 리소스 본문: 이 경우는 상대적으로 위의 두 경우에 비해 보기 힘듭니다.
+
+<br>
+
+Stateless
+===
+HTTP은 상태가 없지만, 세션은 있습니다.    
+HTTP는 상태를 저장하지 않는데 이를 Stateless라고 합니다.    
+이는 e-커머스 쇼핑 바구니처럼, 일관된 방식으로 사용자가 페이지와 상호작용하길 원할 때 문제가 됩니다.  
+이를 해결하기 위해서 쿠키를 생성합니다.    
+
+HTTP 쿠키는 상태가 있는 세션을 만들도록 해줍니다. 헤더 확장성을 사용하여, 동일한 컨텍스트 또는 동일한 상태를 공유하기 위해 각각의 요청들에 세션을 만들도록 HTTP 쿠키가 추가됩니다.
