--- a/_posts/Network/http/2022-10-11-http 기초.md
+++ b/_posts/Network/http/2022-10-11-http 기초.md
@@ -64,6 +64,7 @@ Startline, header, blank line, body 로 이루어집니다.
 시작 줄은 다음과 같이 세 가지 요소로 이루어져 있습니다.
 
 1. HTTP 메서드로, (GET, PUT,POST, HEAD, OPTIONS)를 사용해 서버가 수행해야 할 동작을 나타냅니다. 
+[요청메서드](https://developer.mozilla.org/ko/docs/Web/HTTP/Methods)
 
 2. 요청 타겟은 주로 URL, 또는 프로토콜, 포트, 도메인의 절대 경로로 나타낼 수도 있으며 이들은 요청 컨텍스트에 의해 특정지어 집니다. 요청 타겟 포맷은 HTTP 메소드에 따라 달라집니다. 포맷에는 다음과 같은 것들이 있습니다.   
 origin 형식: 끝에 '?'와 쿼리 문자열이 붙는 절대 경로입니다.   
@@ -87,7 +88,9 @@ asterisk 형식: OPTIONS와 함께 별표('*') 하나로 간단하게 서버 전
 
 * Request header: 페치될 리소스나 클라이언트 자체에 대한 자세한 정보를 포함하는 헤더.
 
-* Entity header: 컨텐츠 길이나 MIME 타입과 같이 엔티티 바디에 대한 자세한 정보를 포함하는 헤더.
+* Entity header: 컨텐츠 길이나 MIME 타입과 같이 엔티티 바디에 대한 자세한 정보를 포함하는 헤더.   
+[MIME 타입](https://developer.mozilla.org/ko/docs/Web/HTTP/Basics_of_HTTP/MIME_types)
+
 
 <br>
 
@@ -114,6 +117,7 @@ asterisk 형식: OPTIONS와 함께 별표('*') 하나로 간단하게 서버 전
 1. 프로토콜 버전: 보통 HTTP/1.1입니다.
 
 2. 상태 코드: 요청의 성공 여부를 나타냅니다. 200, 404 혹은 302입니다.   
+[상태코드](https://developer.mozilla.org/ko/docs/Web/HTTP/Status)
 
 3. 상태 텍스트: 짧고 간결하게 상태 코드에 대한 설명을 글로 나타내어 사람들이 HTTP 메시지를 이해할 때 도움이 됩니다.
 
