--- a/_posts/Network/network/2022-10-11-http 기초.md
+++ b/_posts/Network/network/2022-10-11-http 기초.md
@@ -1,9 +1,9 @@
 ---
 title:  "http 기초"
-excerpt: "http의 기보적인 구조 학습"
+excerpt: "http의 기본적인 구조 학습"
 
 categories:
-  - http
+  - network
 tags:
   - [Network, Http]
 
