--- a/_posts/Javascript/javascript/2022-09-20-Closure란.md
+++ b/_posts/Javascript/javascript/2022-09-20-Closure란.md
@@ -127,4 +127,4 @@ a();
 
 하지만 만약, a() 함수 안에 변수 v를 제거한다면 전역 객체에 있는 변수 v의 값 전연 변수가 출력이 될 것이다.
 
-이러한 과정들이 스코프에 담긴 순서대로 탐색하는 즉, 스코프 체인이라고 보면 된다.
+이러한 과정들이 스코프에 담긴 순서대로 탐색하는 즉, 스코프 체인이라고 보면 된다.ㅁ
